--- a/index.html
+++ b/index.html
@@ -5,16 +5,40 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <link rel="stylesheet" href="style/style.css">
   <title>Spotify</title>
 </head>
 <body>
-
   <main>
-    <header></header>
-
+    <aside></aside>
   </main>
 
-  <footer></footer>
+  <footer class="toolbar ">
+    <div class="autore">
+      <div class="album">
+        <img src="img/sinister.jpeg" alt="">
+      </div>
+
+      <div class="nome-album">
+        <h1>Sinister</h1>
+        <p>Nome del autore</p>
+      </div>
+
+      <div class="like">
+        <i class="far fa-heart"></i>
+        <i class="far fa-folder"></i>
+      </div>
+    </div>
+
+    <div class="brano">
+      <div class="brano-icons"></div>
+      <div class="durata-brano"></div>
+    </div>
+
+    <div class="volume "></div>
+  </footer>
 </body>
 </html>
