--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <aside></aside>
   </main>
 
-  <footer class="toolbar ">
+  <footer class="toolbar">
     <div class="autore">
       <div class="album">
         <img src="img/sinister.jpeg" alt="">
@@ -34,8 +34,23 @@
     </div>
 
     <div class="brano">
-      <div class="brano-icons"></div>
-      <div class="durata-brano"></div>
+      <div class="brano-icons">
+        <i class="fas fa-random"></i>
+        <i class="fas fa-step-backward"></i>
+        <i class="far fa-play-circle"></i>
+        <i class="fas fa-step-forward"></i>
+        <i class="fas fa-undo"></i>
+      </div>
+
+      <div class="durata-brano">
+        <span>0:25</span>
+
+        <div class="barra-brano">
+          <div class="scorrimento-brano"></div>
+        </div>
+
+        <span>4:35</span>
+      </div>
     </div>
 
     <div class="volume "></div>
