--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         <span>0:25</span>
 
         <div class="barra-brano">
-          <div class="scorrimento-brano"></div>
+          <div class="scorrimento-brano">
+          </div>
         </div>
 
         <span>4:35</span>
