--- a/index.html
+++ b/index.html
@@ -46,15 +46,24 @@
         <span>0:25</span>
 
         <div class="barra-brano">
-          <div class="scorrimento-brano">
-          </div>
+          <div class="scorrimento-brano"></div>
         </div>
 
         <span>4:35</span>
       </div>
     </div>
 
-    <div class="volume "></div>
+    <div class="volume">
+      <i class="fas fa-list"></i>
+
+      <i class="fas fa-tv"></i>
+
+      <i class="fas fa-volume-up"></i>
+
+      <div class="barra-brano">
+        <div class="scorrimento-brano"></div>
+      </div>
+    </div>
   </footer>
 </body>
 </html>
