--- a/index.html
+++ b/index.html
@@ -13,9 +13,52 @@
 </head>
 <body>
   <main>
-    <aside></aside>
+    <!-- *----------------------------------------------
+                        !navbar
+         *---------------------------------------------- -->
+    <aside class="navbar">
+      <div class="logo-spotify">
+        <img src="img/logo.svg" alt="">
+      </div>
+
+      <nav>
+        <ul>
+          <li>
+            <i class="fas fa-home"></i>
+            Home
+          </li>
+
+          <li>
+            <i class="fas fa-home"></i>
+            Home
+          </li>
+
+          <li>
+            <i class="fas fa-home"></i>
+            Home
+          </li>
+        </ul>
+      </nav>
+
+      <div class="playlist">
+      </div>
+    </aside>
+
+    <!-- *----------------------------------------------
+                    !servizio a pagamento
+         *---------------------------------------------- -->
+    <div class="container-upgrade">
+      <aside class="upgrade">
+        <section>
+          effetua l'upgrade
+        </section>
+      </aside>
+    </div>
   </main>
 
+  <!-- *----------------------------------------------
+                        !toolbar
+       *---------------------------------------------- -->
   <footer class="toolbar">
     <div class="autore">
       <div class="album">
