--- a/index.html
+++ b/index.html
@@ -17,30 +17,54 @@
                         !navbar
          *---------------------------------------------- -->
     <aside class="navbar">
+
       <div class="logo-spotify">
         <img src="img/logo.svg" alt="">
       </div>
 
       <nav>
         <ul>
-          <li>
-            <i class="fas fa-home"></i>
+          <li class="active">
+            <div class="logo-icon">
+              <img src="img/home.svg" alt="">
+            </div>
             Home
           </li>
 
           <li>
-            <i class="fas fa-home"></i>
-            Home
+            <div class="logo-icon">
+              <img src="img/search.svg" alt="">
+            </div>
+            Cerca
           </li>
 
           <li>
-            <i class="fas fa-home"></i>
-            Home
+            <div class="logo-icon">
+              <img src="img/libreria.svg" alt="">
+            </div>
+            La tua libreria
           </li>
         </ul>
       </nav>
 
       <div class="playlist">
+        <h2>playlist</h2>
+
+        <ul>
+          <li>
+            <span class="logo-playlist">
+              &#x2b;
+            </span>
+            Crea Playlist
+          </li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+        </ul>
       </div>
     </aside>
 
@@ -48,11 +72,9 @@
                     !servizio a pagamento
          *---------------------------------------------- -->
     <div class="container-upgrade">
-      <aside class="upgrade">
-        <section>
-          effetua l'upgrade
-        </section>
-      </aside>
+      <section class="upgrade">
+        effetua l'upgrade
+      </section>
     </div>
   </main>
 
