--- a/index.html
+++ b/index.html
@@ -11,60 +11,80 @@
   <link rel="stylesheet" href="style/style.css">
   <title>Spotify</title>
 </head>
+
 <body>
   <main>
     <!-- *----------------------------------------------
                         !navbar
          *---------------------------------------------- -->
     <aside class="navbar">
+      <div class="container-navbar">
+        <div class="logo-spotify">
+          <img src="img/logo.svg" alt="">
+        </div>
 
-      <div class="logo-spotify">
-        <img src="img/logo.svg" alt="">
+        <nav>
+          <ul>
+            <li class="active">
+              <div class="logo-icon">
+                <img src="img/home.svg" alt="">
+              </div>
+              Home
+            </li>
+
+            <li>
+              <div class="logo-icon">
+                <img src="img/search.svg" alt="">
+              </div>
+              Cerca
+            </li>
+
+            <li>
+              <div class="logo-icon">
+                <img src="img/libreria.svg" alt="">
+              </div>
+              La tua libreria
+            </li>
+          </ul>
+        </nav>
+
+        <div class="playlist">
+          <h2>playlist</h2>
+
+          <ul>
+            <li>
+              <i class="logo-playlist fas fa-plus-square"></i>
+              Crea Playlist
+            </li>
+            <li>Nome Playlist</li>
+            <li>Nome Playlist</li>
+            <li>Nome Playlist</li>
+            <li>Nome Playlist</li>
+            <li>Nome Playlist</li>
+            <li>Nome Playlist</li>
+            <li>Nome Playlist</li>
+          </ul>
+        </div>
       </div>
 
-      <nav>
-        <ul>
-          <li class="active">
-            <div class="logo-icon">
-              <img src="img/home.svg" alt="">
-            </div>
-            Home
-          </li>
+      <div class="container-account">
+        <div class="account">
+          <ul>
+            <li>
+              <div class="logo-download">
+                <img src="img/download.svg" alt="">
+              </div>
+              Installa app
+            </li>
 
-          <li>
-            <div class="logo-icon">
-              <img src="img/search.svg" alt="">
-            </div>
-            Cerca
-          </li>
-
-          <li>
-            <div class="logo-icon">
-              <img src="img/libreria.svg" alt="">
-            </div>
-            La tua libreria
-          </li>
-        </ul>
-      </nav>
-
-      <div class="playlist">
-        <h2>playlist</h2>
-
-        <ul>
-          <li>
-            <span class="logo-playlist">
-              &#x2b;
-            </span>
-            Crea Playlist
-          </li>
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
-          <li>Nome Playlist</li>
-        </ul>
+            <li>
+              <div class="logo-icon">
+                <img src="img/profile.svg" alt="">
+              </div>
+              John Doe
+            </li>
+          </ul>
+        </div>
       </div>
     </aside>
 
