--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               Installa app
             </li>
 
-            <li>
+            <li class="active">
               <div class="logo-icon">
                 <img src="img/profile.svg" alt="">
               </div>
@@ -88,13 +88,31 @@
       </div>
     </aside>
 
-    <!-- *----------------------------------------------
-                    !servizio a pagamento
-         *---------------------------------------------- -->
-    <div class="container-upgrade">
-      <section class="upgrade">
-        effetua l'upgrade
-      </section>
+
+    <div class="container">
+      <!-- *----------------------------------------------
+                      !servizio a pagamento
+           *---------------------------------------------- -->
+      <div class="container-upgrade">
+        <section class="upgrade">
+          effetua l'upgrade
+        </section>
+      </div>
+      <!-- *----------------------------------------------
+                      !container-album
+           *---------------------------------------------- -->
+      <article>
+        <div class="menu">
+          <ul>
+            <li>in evidenza</li>
+            <li>podcast</li>
+            <li>classifiche</li>
+            <li>generi e mood</li>
+            <li>nuove uscite</li>
+            <li>scopri</li>
+          </ul>
+        </div>
+      </article>
     </div>
   </main>
 
