--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <article>
         <div class="menu">
           <ul>
-            <li>in evidenza</li>
+            <li class="active">in evidenza</li>
             <li>podcast</li>
             <li>classifiche</li>
             <li>generi e mood</li>
