--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
   <!-- icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -112,6 +117,125 @@
             <li>scopri</li>
           </ul>
         </div>
+
+        <div class="container-album">
+          <h1>Recently played</h1>
+          <ul>
+            <li>
+              <div class="img-album">
+                <div class="hover">
+                  <i class="far fa-play-circle"></i>
+                </div>
+                <img src="img/metal_lifting.jpg" alt="">
+              </div>
+              <h3>Heavy Metal</h3>
+              <p>Subtitle</p>
+            </li>
+
+            <li>
+              <div class="img-album">
+                <div class="hover">
+                  <i class="far fa-play-circle"></i>
+                </div>
+                <img src="img/stranger.jpeg" alt="">
+              </div>
+              <h3>Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</h3>
+              <p>Kyle Dixon & Micheal Stein</p>
+            </li>
+
+            <li>
+              <div class="img-album">
+                <div class="hover">
+                  <i class="far fa-play-circle"></i>
+                </div>
+                <img src="img/aquietplace.jpeg" alt="">
+              </div>
+              <h3>A quiet place</h3>
+              <p>Subtitle</p>
+            </li>
+
+            <li>
+              <div class="img-album">
+                <div class="hover">
+                  <i class="far fa-play-circle"></i>
+                </div>
+                <img src="img/split.jpeg" alt="">
+              </div>
+              <h3>Split</h3>
+              <p>Subtitle</p>
+            </li>
+
+            <li>
+              <div class="img-album">
+                <div class="hover">
+                  <i class="far fa-play-circle"></i>
+                </div>
+                <img src="img/cure.jpeg" alt="">
+              </div>
+              <h3>A cure for wellness</h3>
+              <p>Subtitle</p>
+            </li>
+
+            <li>
+              <div class="img-album">
+                <div class="hover">
+                  <i class="far fa-play-circle"></i>
+                </div>
+                <img src="img/sinister.jpeg" alt="">
+              </div>
+              <h3>Sinister</h3>
+              <p>Subtitle</p>
+            </li>
+          </ul>
+
+          <h1>Creato per John Doe</h1>
+          <p>Più ascolti, più accurati saranno i suggerimenti.</p>
+          <ul>
+            <li>
+              <div class="img-album">
+                <div class="hover">
+                  <i class="far fa-play-circle"></i>
+                </div>
+                <img src="img/radar.jpeg" alt="">
+              </div>
+              <h3>Relaase Redar</h3>
+            </li>
+
+            <li>
+              <div class="img-album">
+                <div class="hover">
+                  <i class="far fa-play-circle"></i>
+                </div>
+                <img src="img/mixdaily.jpeg" alt="">
+              </div>
+              <h3>Daily Mix 1</h3>
+            </li>
+          </ul>
+
+          <h1>Artisti più popolari</h1>
+          <p>Più ascolti, più accurati saranno i suggerimenti.</p>
+          <ul>
+            <li>
+              <div class="img-album radius">
+                <div class="hover">
+                  <i class="far fa-play-circle"></i>
+                </div>
+                <img src="img/youg.jpeg" alt="">
+              </div>
+              <h3>Lana del Rey</h3>
+            </li>
+
+            <li>
+              <div class="img-album radius">
+                <div class="hover">
+                  <i class="far fa-play-circle"></i>
+                </div>
+                <img src="img/einaudi.jpeg" alt="">
+              </div>
+              <h3>Ludovico Einaudi</h3>
+            </li>
+          </ul>
+        </div>
       </article>
     </div>
   </main>
@@ -149,7 +273,9 @@
         <span>0:25</span>
 
         <div class="barra-brano">
-          <div class="scorrimento-brano"></div>
+          <div class="scorrimento-brano">
+            <div class="scorrimento"></div>
+          </div>
         </div>
 
         <span>4:35</span>
@@ -164,7 +290,9 @@
       <i class="fas fa-volume-up"></i>
 
       <div class="barra-brano">
-        <div class="scorrimento-brano"></div>
+        <div class="scorrimento-brano">
+          <div class="scorrimento"></div>
+        </div>
       </div>
     </div>
   </footer>
