Correzione della navbar

--- a/index.html
+++ b/index.html
@@ -23,73 +23,70 @@
                         !navbar
          *---------------------------------------------- -->
     <aside class="navbar">
-      <div class="container-navbar">
-        <div class="logo-spotify">
-          <img src="img/logo.svg" alt="">
-        </div>
-
-        <nav>
-          <ul>
-            <li class="active">
-              <div class="logo-icon">
-                <img src="img/home.svg" alt="">
-              </div>
-              Home
-            </li>
-
-            <li>
-              <div class="logo-icon">
-                <img src="img/search.svg" alt="">
-              </div>
-              Cerca
-            </li>
-
-            <li>
-              <div class="logo-icon">
-                <img src="img/libreria.svg" alt="">
-              </div>
-              La tua libreria
-            </li>
-          </ul>
-        </nav>
-
-        <div class="playlist">
-          <h2>playlist</h2>
-
-          <ul>
-            <li>
-              <i class="logo-playlist fas fa-plus-square"></i>
-              Crea Playlist
-            </li>
-            <li>Nome Playlist</li>
-            <li>Nome Playlist</li>
-            <li>Nome Playlist</li>
-            <li>Nome Playlist</li>
-            <li>Nome Playlist</li>
-            <li>Nome Playlist</li>
-            <li>Nome Playlist</li>
-          </ul>
-        </div>
+      <div class="logo-spotify">
+        <img src="img/logo.svg" alt="">
       </div>
 
-      <div class="container-account">
-        <div class="account">
-          <ul>
-            <li>
-              <div class="logo-download">
-                <img src="img/download.svg" alt="">
-              </div>
-              Installa app
-            </li>
+      <nav>
+        <ul>
+          <li class="active">
+            <div class="logo-icon">
+              <img src="img/home.svg" alt="">
+            </div>
+            Home
+          </li>
 
-            <li class="active">
-              <div class="logo-icon">
-                <img src="img/profile.svg" alt="">
-              </div>
-              John Doe
-            </li>
-          </ul>
+          <li>
+            <div class="logo-icon">
+              <img src="img/search.svg" alt="">
+            </div>
+            Cerca
+          </li>
+
+          <li>
+            <div class="logo-icon">
+              <img src="img/libreria.svg" alt="">
+            </div>
+            La tua libreria
+          </li>
+        </ul>
+      </nav>
+
+      <div class="playlist">
+        <h2>playlist</h2>
+
+        <div class="button">
+          <i class="logo-playlist fas fa-plus-square"></i>
+          Crea Playlist
         </div>
+
+        <ul>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+          <li>Nome Playlist</li>
+        </ul>
+      </div>
+
+      <div class="account">
+        <ul>
+          <li>
+            <div class="logo-download">
+              <img src="img/download.svg" alt="">
+            </div>
+            Installa app
+          </li>
+
+          <li class="active">
+            <div class="logo-icon">
+              <img src="img/profile.svg" alt="">
+            </div>
+            John Doe
+          </li>
+        </ul>
       </div>
     </aside>
 
