--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="style/media queries.css">
   <title>Spotify</title>
 </head>
 
@@ -28,26 +29,37 @@
       </div>
 
       <nav>
+        <div class="logo-icon mobile">
+          <a href="#">
+            <img src="img/logo-small.svg" alt="">
+          </a>
+        </div>
         <ul>
           <li class="active">
             <div class="logo-icon">
               <img src="img/home.svg" alt="">
             </div>
-            Home
+            <div>
+              Home
+            </div>
           </li>
 
           <li>
             <div class="logo-icon">
               <img src="img/search.svg" alt="">
             </div>
-            Cerca
+            <div>
+              Cerca
+            </div>
           </li>
 
           <li>
             <div class="logo-icon">
               <img src="img/libreria.svg" alt="">
             </div>
-            La tua libreria
+            <div>
+              La tua libreria
+            </div>
           </li>
         </ul>
       </nav>
@@ -77,14 +89,18 @@
             <div class="logo-download">
               <img src="img/download.svg" alt="">
             </div>
-            Installa app
+            <div>
+              Installa app
+            </div>
           </li>
 
           <li class="active">
             <div class="logo-icon">
               <img src="img/profile.svg" alt="">
             </div>
-            John Doe
+            <div>
+              John Doe
+            </div>
           </li>
         </ul>
       </div>
