--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -106,7 +106,6 @@
       </div>
     </aside>
 
-
     <div class="container">
       <!-- *----------------------------------------------
                       !servizio a pagamento
@@ -116,6 +115,7 @@
           effetua l'upgrade
         </section>
       </div>
+
       <!-- *----------------------------------------------
                       !container-album
            *---------------------------------------------- -->
@@ -258,13 +258,15 @@
        *---------------------------------------------- -->
   <footer class="toolbar">
     <div class="autore">
-      <div class="album">
-        <img src="img/sinister.jpeg" alt="">
-      </div>
+      <div class="container-brano">
+        <div class="album">
+          <img src="img/sinister.jpeg" alt="">
+        </div>
 
-      <div class="nome-album">
-        <h1>Sinister</h1>
-        <p>Nome del autore</p>
+        <div class="nome-album">
+          <h1>Sinister</h1>
+          <p>Nome del autore</p>
+        </div>
       </div>
 
       <div class="like">
@@ -286,9 +288,8 @@
         <span>0:25</span>
 
         <div class="barra-brano">
-          <div class="scorrimento-brano">
-            <div class="scorrimento"></div>
-          </div>
+          <div class="scorrimento-brano"></div>
+          <div class="scorrimento"></div>
         </div>
 
         <span>4:35</span>
